tests/errors/parser-errors/inline/inline_double_comma.smark
(text)->(tag: arg1,, arg2)
